[tool.poetry]
name = "proper_ctau"
version = "0.1.0"
description = "ROOT exercise to get and fit proper ctau of long-lived particles"
authors = ["Shamrock Lee <ShamrockLee+GitHub@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.18.1"
uproot = "^3.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
